--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logo.png">
     <link rel="stylesheet" href="%PUBLIC_URL%/graphiql.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
     <style>
       body {
         height: 100%;
@@ -25,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Divvy GraphiQL</title>
   </head>
   <body>
     <div id="root"></div>
